--- a/security01/src/main/resources/application.yml
+++ b/security01/src/main/resources/application.yml
@@ -1,17 +1,20 @@
+server:
+  port: 8080
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://124.221.87.28:3306/user?characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://198.192.0.1:3306/user?characterEncoding=UTF-8&useSSL=false
     username: root
-    password: WJHwjh20010825.
+    password: 123456
     hikari:
       max-lifetime: 120000
   redis:
-    host: 124.221.87.28
+    host: 198.192.0.1
     port: 6379
-    password: WJHwjh20010825.
+    password: 123456
   thymeleaf:
     cache: false
+
 
 logging:
   level:
